--- a/style.css
+++ b/style.css
@@ -49,17 +49,13 @@ container {
     53%,
     80%,
     to {
-        -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
         animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-        -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
     }
 
     40%,
     43% {
-        -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
         animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-        -webkit-transform: translate3d(0, -30px, 0);
         transform: translate3d(0, -30px, 0);
     }
 
@@ -83,23 +79,10 @@ container {
     transform-origin: center bottom;
 }
 
-@-webkit-keyframes flash {
-    from,
-    50%,
-    to {
-        opacity: 1;
-    }
-
-    25%,
-    75% {
-        opacity: 0;
-    }
-}
-
 @keyframes flash {
-    from,
+    0%,
     50%,
-    to {
+    100% {
         opacity: 1;
     }
 
@@ -110,15 +93,12 @@ container {
 }
 
 .flash {
-    -webkit-animation-name: flash;
     animation-name: flash;
 }
 
 .animated {
-    -webkit-animation-duration: 1s;
     animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
+    animation-fill-mode: none;
 }
 
 .animated.infinite {
