--- a/Final/style_final.css
+++ b/Final/style_final.css
@@ -1,20 +1,58 @@
 body {
+    background-color: #2c3e50;
     margin: 0;
 }
 
 .container-hide-title {
+    top: 0;
+    background: #2c3e50;
     display: grid;
     grid-template-columns: repeat(5, 20vw);
-    grid-template-rows: repeat(15, 20vh);
-
+    grid-template-rows: 400px 100px 400px repeat(13, 60px);
 }
+
+.item-hide-title {
+    position: sticky;
+    top: 0;
+}
+
+.item-hide-title:nth-of-type(1) {
+    background: #1abc9c;
+    grid-area: 11 / 1;
+}
+
+.item-hide-title:nth-of-type(2) {
+    background: #1abc9c;
+    grid-area: 4 / 2;
+}
+
+.item-hide-title:nth-of-type(3) {
+    background: #1abc9c;
+    grid-area: 8 / 3;
+}
+
+.item-hide-title:nth-of-type(4) {
+    background: #1abc9c;
+    grid-area: 16 / 4;
+}
+
+.item-hide-title:nth-of-type(5) {
+    background: #1abc9c;
+    grid-area: 13 / 5;
+}
+
+.item-hide {
+    background: #2c3e50;
+    color: white;
+    grid-area: 2 / 3
+}
+
 
 .container {
     display: grid;
     grid-template-columns: 200px auto auto auto auto;
-    grid-template-rows: 80px auto auto auto auto 50px ;
+    grid-template-rows: auto auto auto auto 50px ;
     grid-template-areas:
-            "header header header header header"
             "sidebar main main main main"
             "sidebar main main main main"
             "sidebar main main main main"
@@ -31,12 +69,6 @@ body {
 .sub-sidebar {
     position: sticky;
     top: 0;
-}
-
-.header {
-    grid-area: header;
-    background-color: #1abc9c;
-    padding: 15px;
 }
 
 .main{
@@ -70,6 +102,9 @@ body {
 }
 
 page-title {
+    z-index: 1;
+    top: 0;
+    position: sticky;
     color: #2c3e50;
     font-family: 'Courier New', serif;
     font-size: 50px;
